# cpp-template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cSpell.json
.github/workflows/: build.yml  ci_image.yml
cmake/: build_config.cmake  install_external_project.cmake  load_external_project.cmake  project_config.cmake
cmake/external_projects/: doctest.cmake
cmake/package/: config.cmake
docker/: base.dockerfile
docker/variations/: clang.dockerfile  emscripten.dockerfile  gcc.dockerfile  mingw.dockerfile
etc/test/consumer/: CMakeLists.txt
etc/test/hosted/: CMakeLists.txt
etc/test/hosted/include/nctemplate/test/: hosted.hpp
etc/test/hosted/src/: hosted.cpp
etc/test/standalone/: CMakeLists.txt
etc/test/wasm/test_driver/: index.js  package-lock.json  package.json
lib/: CMakeLists.txt
lib/include/: sample.hpp
lib/include/sample/: public.hpp  public_header_only.hpp
lib/src/: internal.cpp  public.cpp  sample.cpp  sample2.cpp  sample2.hpp  sample2.test.cpp
script/: build_docker_images.ps1  cspell.sh  format.sh  test.sh  test_consumer.sh  test_emscripten.sh  tidy.sh
test/: CMakeLists.txt
test/src/: sample.cpp
